# Monocle

./: CMakeLists.txt  LICENSE  README
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/monocle/Asset/: JsonParser.h  Model.h  ShaderProgram.h  ShaderUniformValue.h  Texture.h
include/monocle/Render/: Camera.h  RenderPass.h  Scene.h  SceneOrdering.h
include/monocle/Scene/: Camera.h  SceneObject.h
include/monocle/Shader/: ShaderLoader.h
include/monocle/Support/: StreamReader.h
lib/: CMakeLists.txt
lib/Asset/: CMakeLists.txt  JsonParser.cpp  ShaderProgram.cpp  Texture.cpp
lib/Render/: CMakeLists.txt  Camera.cpp  RenderPass.cpp  Scene.cpp  SceneObject.cpp  SceneOrdering.cpp
lib/Scene/: CMakeLists.txt  Camera.cpp
lib/Shader/: CMakeLists.txt  ShaderLoader.cpp
lib/Support/: CMakeLists.txt  StreamReader.cpp
projects/test/: CMakeLists.txt  test.cpp
